--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -1,7 +1,5 @@
 .page-header
-  = link_to new_tweet_path, class: 'btn btn-primary' do
-    %span.glyphicon.glyphicon-plus
-    New Tweet
+
   %h1 Listing tweets
 
 .table-responsive
@@ -10,14 +8,14 @@
       %tr
         %th Text
         %th User name
-        %th{colspan: 3}
+      -#  %th{colspan: 3}
 
     %tbody
       - @tweets.each do |tweet|
         %tr
           %td= tweet.text
           %td= tweet.user_name
-          %td
+        -#  %td
             = link_to tweet do
               %span.glyphicon.glyphicon-ok
           %td
